# RAG-Py

./: .env.example  .gitignore  CONTEXT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-28-p0-1-db-migration/: check.jsonl  task.json
.trellis/tasks/05-28-p0-2-kb-doc-api/: implement.jsonl  task.json
.trellis/tasks/05-28-p0-3-indexing-pipeline/: implement.jsonl  implement.md  task.json
.trellis/tasks/05-28-p0-4-query-rag/: design.md  task.json
.trellis/workspace/dong/: index.md  journal-1.md
app/: __init__.py  main.py
app/api/: deps.py  error_handlers.py
app/api/v1/: __init__.py
app/application/services/: document_service.py  hybrid_retrieval_service.py  ingestion_service.py  knowledge_base_service.py  prompt_builder.py  rag_service.py  (+1 more)
app/core/: config.py  logging.py
app/domain/: errors.py
app/schemas/: common.py  document.py  knowledge_base.py  query.py
app/tasks/: celery_app.py  indexing.py
docs/: RAG系统项目架构设计文档.md  开发交接与实现约定.md  开发实操指南（你来实现）.md
tests/: conftest.py  test_api.py  test_bm25.py  test_metrics.py
tests/eval/: dataset.py  metrics.py  runner.py
web/: README.md  package-lock.json  package.json
(+56 files in other folders)
