[project]
name = "rag-py"
version = "0.1.0"
description = "RAG system with FastAPI, Celery, BGE embedding, and MiMo LLM."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "celery>=5.4.0",
    "redis>=5.0.8",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "chromadb>=0.5.5",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.1",
    "mypy>=1.11.1",
]

[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
